# Youtube-Video-Downloader-v2

./: .gitignore  pyproject.toml
examples/playlist/: download.py  video_list.py
youtube_video_downloader/application/: main.py
youtube_video_downloader/application/exceptions/: attributes.py  window.py
youtube_video_downloader/application/tray/: _enums.py  _globals.py  _notification.py  menu.py
youtube_video_downloader/application/window/: __init__.py  _default.py  _download_video.py  _home.py  _playlist.py
youtube_video_downloader/configs/: _application.py
youtube_video_downloader/core/: base.py  downloader.py  playlist.py
youtube_video_downloader/core/log/: __init__.py  _logger.py
youtube_video_downloader/core/types/: file.py  video.py
youtube_video_downloader/exceptions/: runtime.py
youtube_video_downloader/utils/: __init__.py  format_file_name.py
youtube_video_downloader/utils/audio/: exceptions.py  operations.py
youtube_video_downloader/utils/dependencies/: _checks.py  _commands.py  _installations.py  exceptions.py
youtube_video_downloader/utils/dependencies/ffmpeg/: _installations.py  operations.py
youtube_video_downloader/utils/file/: exceptions.py  integrity.py  operations.py
